--- a/controller/Cargo.toml
+++ b/controller/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "controller"
+name = "survsim_controller"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,3 +7,4 @@ edition = "2021"
 paho-mqtt = "0.12.5"
 serde_json = "1.0.128"
 survsim_structs = { path = "../structs" }
+survsim_planner_colgen = { path = "../planner_colgen" }
