--- a/controller/Cargo.toml
+++ b/controller/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 paho-mqtt = "0.12.5"
 serde_json = "1.0.128"
 survsim_structs = { path = "../structs" }
-survsim_planner_colgen = { path = "../planner_colgen" }
+survsim_planner = { path = "../planner" }
