--- a/planner/Cargo.toml
+++ b/planner/Cargo.toml
@@ -9,6 +9,7 @@ highs-sys = { version = "1.6.4", features = ["libz"] }
 hprof = "0.1.3"
 log = "0.4.22"
 ordered-float = "4.3.0"
+paho-mqtt = "0.12.5"
 serde_json = "1.0.128"
 survsim_structs = { path = "../structs" }
 tinyvec = { version = "1.8.0", features = ["alloc"] }
