--- a/webdemo/Cargo.toml
+++ b/webdemo/Cargo.toml
@@ -17,8 +17,21 @@ env_logger = "0.11"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4"
-web-sys = "0.3.70"           # to access the DOM (to hide the loading text)
-
+web-sys = { version = "0.3", features = [
+    "Blob",
+    "BlobPropertyBag",
+    "console",
+    "DedicatedWorkerGlobalScope",
+    "Document",
+    "HtmlElement",
+    "Location",
+    "MessageEvent",
+    "Node",
+    "Text",
+    "Url",
+    "Window",
+    "Worker",
+] }
 [profile.release]
 opt-level = 2 # fast and small wasm
 
