--- a/planner/Cargo.toml
+++ b/planner/Cargo.toml
@@ -5,8 +5,9 @@ edition = "2021"
 
 
 [features]
-default = ["highs", "prof"]
+default = ["highs", "prof", "gurobi"]
 highs=["dep:highs-sys"]
+gurobi=["dep:grb"]
 gbfs=["dep:serde_json"]
 prof=["dep:hprof", "dep:serde_json", "dep:tabwriter"]
 
@@ -21,6 +22,8 @@ tinyvec = { version = "1.8.0", features = ["alloc"] }
 serde_json = { version="1.0.128", optional=true}
 highs-sys = { version = "1.6.4", features = ["libz"], optional=true }
 tabwriter = { version = "1.4", optional=true}
+
+grb = { version = "2.0.3", optional = true }
 
 [dev-dependencies]
 paho-mqtt = "0.12.5"
