--- a/planner/Cargo.toml
+++ b/planner/Cargo.toml
@@ -24,6 +24,7 @@ highs-sys = { version = "1.6.4", features = ["libz"], optional=true }
 tabwriter = { version = "1.4", optional=true}
 
 grb = { version = "2.0.3", optional = true }
+csv = "1.3.1"
 
 [dev-dependencies]
 paho-mqtt = "0.12.5"
